# cutman

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  openapi.yaml  run_tests.sh
data/: .admin_token  cutman.db  cutman.db-shm  cutman.db-wal
scripts/: create-sample-data.sh
src/: error.rs  lib.rs  main.rs
src/auth/: helpers.rs  middleware.rs  mod.rs  token.rs
src/cli/: auth.rs  commands.rs  credential.rs  credentials.rs  folder.rs  http_client.rs  info.rs  mod.rs  namespace.rs  new.rs  permission.rs  pickers.rs  principal.rs  repo.rs  tag.rs  token.rs  user.rs
src/config/: mod.rs  server.rs
src/lfs/: mod.rs  storage.rs
src/server/: dto.rs  mod.rs  response.rs  router.rs  validation.rs
src/server/admin/: grants.rs  mod.rs  namespaces.rs  principals.rs  tokens.rs  users.rs
src/server/content/: auth.rs  dto.rs  git_ops.rs  handlers.rs  mod.rs
src/server/git/: auth.rs  handlers.rs  mod.rs  process.rs
src/server/lfs/: dto.rs  handlers.rs  mod.rs
src/server/user/: access.rs  folders.rs  mod.rs  namespaces.rs  repo_folder.rs  repo_folders.rs  repo_tags.rs  repos.rs  tags.rs
src/store/: mod.rs  path.rs  schema.rs  sqlite.rs
src/tui/: actions.rs  app.rs  mod.rs  tree.rs  ui.rs
src/types/: mod.rs  models.rs  permission.rs
tests/: api.rs  cli.rs  cli_user.rs
tests/api/: health.hurl
tests/api/admin/: grants.hurl  namespaces.hurl  principals.hurl  tokens.hurl  users.hurl
tests/api/content/: archive.hurl  blame.hurl  blob.hurl  commits.hurl  compare.hurl  mutations.hurl  readme.hurl  refs.hurl  (+1 more)
tests/common/: mod.rs  test_server.rs
(+9 files in other folders)
